# learn_bevy

./: .gitignore  Cargo.toml  README.md
assets/: shader.frag  shader.vert
assets/glsl-in/: shader.vert
assets/wgsl-out/: fragment.wgsl  vertex.wgsl
examples/: app_example.rs  app_new.rs  hello_world.rs  load_glsl.rs  naga_test.rs
src/: app.rs  application.rs  data_struct.rs  data_stuct.rs  gui_tools.rs  lib.rs  temp.rs  transform.rs  utils.rs  vertex.rs
