[package]
name = "glsl_naga"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20.1"
winit = "0.29.15"
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui-winit = "0.28.1"
cgmath = "0.18.0"
zerocopy = "0.8.0-alpha.16"
zerocopy-derive = "0.8.0-alpha.16"
naga = { version = "0.20.0", features = ["glsl-in", "wgsl-out"] }
futures = "0.3.30"